--- a/index.html
+++ b/index.html
@@ -225,12 +225,7 @@
         </div>
         <div class="content_section_text">
           <p>
-                This is the default welcome page used to test the correct 
-                operation of the Apache2 server after installation on Ubuntu systems.
-                It is based on the equivalent page on Debian, from which the Ubuntu Apache
-                packaging is derived.
-                If you can read this page, it means that the Apache HTTP server installed at
-                this site is working properly. You should <b>replace this file</b> (located at
+                shit
                 <tt>/var/www/html/index.html</tt>) before continuing to operate your HTTP server.
           </p>
 
@@ -249,9 +244,7 @@
         </div>
         <div class="content_section_text">
           <p>
-                Ubuntu's Apache2 default configuration is different from the
-                upstream default configuration, and split into several files optimized for
-                interaction with Ubuntu tools. The configuration system is
+                fuck you
                 <b>fully documented in
                 /usr/share/doc/apache2/README.Debian.gz</b>. Refer to this for the full
                 documentation. Documentation for the web server itself can be
